--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="containerEmail">
         <h1>Stay  updated!</h1>
-        <p>Join 60.000+ product managers receiving monthy updates on:</p>
+        <p class="textProduct">Join 60.000+ product managers receiving monthy<br/> updates on:</p>
         <ul>
           <div class="alingOptions">
             <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><g fill="none"><circle cx="10.5" cy="10.5" r="10.5" fill="#FF6155"/><path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8"/></g></svg>
@@ -30,9 +30,9 @@
             <li>And much more!</li>
           </div>
         </ul>
-        <p>Email address</p>
+        <p class="textEmail">Email address</p>
         <form action="/action_page.php">
-          <input type="text" id="username" name="username"><br>
+          <input type="email" id="username" placeholder="email@company.com" name="username"><br>
           <input type="submit" value="Submit">
         </form>
       </div>
